2005-12-30  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #2108: Error when using hide in Frontend Editing

2005-12-29  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #2100: Warning: Call-time pass-by-reference has been deprecated
	* Fixed bug #2126: Updating encryption key sets compat version to same value
	* Fixed bug #2132: Error on moving lost records
	* Fixed bug #2134: "Place as root" does not function
	* Changed version of indexed search to 2.9.0
	* Fixed bug #2117: Install-Tool: "Write to localconf.php" sets "sqlDebug" and "USdateFormat" automatically
	* Fixed a bug in quote settings in CSS styled content - table. Now it is possible to copy/paste a CSV directly.

2005-12-28  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.0beta1
	* Rised version number to 4.0beta1
	* Fixed a bug in tstemplate (path still pointing to typo3/ext/)

2005-12-28  Michael Stucki  <michael@typo3.org>

	* Changed TYPO3_CONF_VARS[SYS][fileCreateMask] from 775 to 755
	* Rised version number to 4.0-dev
	* Added "rtehtmlarea" as a system extension
		- Important notice: Because of a known bug, the buttons "blockstylelabel", "blockstyle", "textstylelabel" and "textstyle" will not work with this version.
	* Fixed bug #1155: Install tool want to recreate the tables, and drop the old ones
	* Fixed Gremlin #1690: nav_frame is sometimes out of sync with the selected page
	* Various changes in t3lib_parsehtml_proc (on behalf of Stanislas Rolland):
		- Allow style and xml:lang attributes on span tags
		- Include "hr", "address" and "dl" in headListTags
		- Avoid insertion of superfluous linebreaks by transform_db
		- Eliminate true linebreaks inside Hx tags
		- Convert linebreaks to spaces instead of deleting them
		- Wrap a-tags that contain a style attribute with a span-tag
		- Honor setting RTE.default.proc.HTMLparser_db.xhtml_cleaning=1

2005-12-27  Bernhard Kraft  <kraftb@kraftb.at>
