@@ -1,3 +1,8 @@
+
+2005-12-13  Martin Kutschker  <martin.t.kutschker@blackbox.net>
+
+	* Add alternative field name argument to tslib_pibase->pi_initPIflexForm()
+
 2005-12-30  Sebastian Kurfuerst  <sebastian@garbage-group.de>
 
 	* Fixed bug #2108: Error when using hide in Frontend Editing
